--- a/fxml/fragments/editor/word_field.fxml
+++ b/fxml/fragments/editor/word_field.fxml
@@ -7,11 +7,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 
-
-<HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="0.0" spacing="5.0" styleClass="editor-item" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fragments.EditorItemController">
+<HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" spacing="5.0" styleClass="editor-item" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fragments.WordFieldController">
    <children>
-      <Label styleClass="text-color1" text="Word2" fx:id="ObjectLabel" />
-      <Button mnemonicParsing="false" fx:id="deleteObjectButton">
+      <Label fx:id="objectLabel" styleClass="text-color1" text="Word2" />
+      <Button fx:id="deleteButton" mnemonicParsing="false">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -20,6 +19,6 @@
             </ImageView>
          </graphic>
       </Button>
-      <Separator orientation="VERTICAL" prefHeight="200.0" />
+      <Separator orientation="VERTICAL" />
    </children>
 </HBox>
