--- a/fxml/fragments/editor/word_letter.fxml
+++ b/fxml/fragments/editor/word_letter.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox fx:id="container" alignment="CENTER_LEFT" prefHeight="0.0" spacing="2.0" styleClass="editor-item" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fragments.EditorItemCheckboxController">
+<HBox fx:id="container" alignment="CENTER_LEFT" prefHeight="0.0" spacing="2.0" styleClass="editor-item" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fragments.WordLetterController">
    <children>
       <CheckBox fx:id="checkbox" mnemonicParsing="false" />
-      <Label fx:id="ObjectLabel" minWidth="10.0" styleClass="text-color1" text="a" />
-      <Button fx:id="deleteObjectButton" mnemonicParsing="false">
+      <Label fx:id="objectLabel" minWidth="10.0" styleClass="text-color1" text="a" />
+      <Button fx:id="deleteButton" mnemonicParsing="false">
          <graphic>
             <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                <image>
