--- a/fxml/fragments/nav/letter.fxml
+++ b/fxml/fragments/nav/letter.fxml
@@ -9,13 +9,12 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane styleClass="word-list-item" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fragments.WordItemController">
+<BorderPane styleClass="word-list-item" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fragments.NavLetterController">
    <center>
       <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" onMouseClicked="#contentClicked" prefHeight="20.0" spacing="10.0">
          <children>
             <Label fx:id="objectLabel" maxWidth="1.7976931348623157E308" minWidth="50.0" text="Mot" textFill="WHITE" />
             <Label fx:id="descriptionLabel" minWidth="50.0" styleClass="description" text="Mot ASCII" textFill="WHITE" />
-            <HBox fx:id="typesContainer" alignment="CENTER_LEFT" spacing="6.0" HBox.hgrow="ALWAYS" />
          </children>
          <padding>
             <Insets bottom="1.0" top="1.0" />
@@ -29,23 +28,14 @@
       <CheckBox fx:id="selectedCheckBox" mnemonicParsing="false" BorderPane.alignment="CENTER" />
    </left>
    <right>
-      <HBox alignment="CENTER_LEFT" spacing="2.0" BorderPane.alignment="CENTER">
-         <children>
-            <ImageView fx:id="warningImage" fitHeight="24.0" fitWidth="24.0" opacity="0.0" pickOnBounds="true" preserveRatio="true">
+      <Button alignment="CENTER_RIGHT" contentDisplay="CENTER" minWidth="30.0" mnemonicParsing="false" onAction="#edit">
+         <graphic>
+            <ImageView fitHeight="150.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../icons/warning.png" />
+                  <Image url="@../../icons/edit.png" />
                </image>
             </ImageView>
-            <Button alignment="CENTER_RIGHT" contentDisplay="CENTER" minWidth="30.0" mnemonicParsing="false" onAction="#edit">
-               <graphic>
-                  <ImageView fitHeight="150.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../icons/edit.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-         </children>
-      </HBox>
+         </graphic>
+      </Button>
    </right>
 </BorderPane>
