--- a/fxml/static/editor_type.fxml
+++ b/fxml/static/editor_type.fxml
@@ -102,7 +102,20 @@
                                     <ComboBox fx:id="positionWordComboBox" />
                                  </children>
                               </HBox>
-                              <Button mnemonicParsing="false" onAction="#chooseParent" styleClass="selection-button" text="Choose a Type" GridPane.columnIndex="1" />
+                              <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1">
+                                 <children>
+                                    <Button fx:id="chooseParentButton" mnemonicParsing="false" onAction="#chooseParent" styleClass="selection-button" text="Choose a Type" />
+                                    <Button mnemonicParsing="false" onAction="#deleteParent">
+                                       <graphic>
+                                          <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../icons/cross.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Button>
+                                 </children>
+                              </HBox>
                            </children>
                            <VBox.margin>
                               <Insets left="20.0" right="20.0" />
