--- a/fxml/static/editor_word.fxml
+++ b/fxml/static/editor_word.fxml
@@ -164,7 +164,7 @@
                      <children>
                         <VBox spacing="5.0">
                            <children>
-                              <CheckBox fx:id="lengthCheckBox" mnemonicParsing="false" text="Word Length">
+                              <CheckBox fx:id="lengthCheckBox" mnemonicParsing="false" selected="true" text="Word Length">
                                  <styleClass>
                                     <String fx:value="text-color1" />
                                     <String fx:value="small-title" />
@@ -193,21 +193,21 @@
                               <RowConstraints minHeight="10.0" />
                            </rowConstraints>
                            <children>
-                              <CheckBox fx:id="emotionalityCheckBox" mnemonicParsing="false" styleClass="text-color1" text="Emotionality" />
+                              <CheckBox fx:id="emotionalityCheckBox" mnemonicParsing="false" selected="true" styleClass="text-color1" text="Emotionality" />
                               <HBox fx:id="emotionalityContainer" spacing="5.0" GridPane.columnIndex="2">
                                  <children>
                                     <TextField fx:id="emotionalityValue" alignment="CENTER" minWidth="30.0" prefWidth="30.0" style="-fx-padding: 2;" text="0.5" />
                                     <Slider fx:id="emotionalitySlider" blockIncrement="0.05" majorTickUnit="0.25" max="1.0" showTickMarks="true" snapToTicks="true" value="0.5" />
                                  </children>
                               </HBox>
-                              <CheckBox fx:id="vulgarityCheckBox" layoutX="10.0" layoutY="11.0" mnemonicParsing="false" styleClass="text-color1" text="Vulgarity" GridPane.rowIndex="1" />
+                              <CheckBox fx:id="vulgarityCheckBox" layoutX="10.0" layoutY="11.0" mnemonicParsing="false" selected="true" styleClass="text-color1" text="Vulgarity" GridPane.rowIndex="1" />
                               <HBox fx:id="vulgarityContainer" spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                  <children>
                                     <TextField fx:id="vulgarityValue" alignment="CENTER" minWidth="30.0" prefWidth="30.0" style="-fx-padding: 2;" text="0.5" />
                                     <Slider fx:id="vulgaritySlider" blockIncrement="0.05" majorTickUnit="0.25" max="1.0" showTickMarks="true" snapToTicks="true" value="0.5" />
                                  </children>
                               </HBox>
-                              <CheckBox fx:id="formalityCheckBox" layoutX="10.0" layoutY="46.0" mnemonicParsing="false" styleClass="text-color1" text="Formality" GridPane.rowIndex="2" />
+                              <CheckBox fx:id="formalityCheckBox" layoutX="10.0" layoutY="46.0" mnemonicParsing="false" selected="true" styleClass="text-color1" text="Formality" GridPane.rowIndex="2" />
                               <HBox fx:id="formalityContainer" spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                                  <children>
                                     <TextField fx:id="formalityValue" alignment="CENTER" minWidth="30.0" prefWidth="30.0" style="-fx-padding: 2;" text="0.5" />
@@ -218,7 +218,7 @@
                         </GridPane>
                         <VBox spacing="5.0" GridPane.rowIndex="1">
                            <children>
-                              <CheckBox fx:id="rootsCheckBox" mnemonicParsing="false" text="Roots">
+                              <CheckBox fx:id="rootsCheckBox" mnemonicParsing="false" selected="true" text="Roots">
                                  <styleClass>
                                     <String fx:value="text-color1" />
                                     <String fx:value="small-title" />
@@ -245,7 +245,7 @@
                         </VBox>
                         <VBox spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <children>
-                              <CheckBox fx:id="linksCheckBox" mnemonicParsing="false" text="Linked Words">
+                              <CheckBox fx:id="linksCheckBox" mnemonicParsing="false" selected="true" text="Linked Words">
                                  <styleClass>
                                     <String fx:value="text-color1" />
                                     <String fx:value="small-title" />
