--- a/fxml/static/editor_letter.fxml
+++ b/fxml/static/editor_letter.fxml
@@ -66,7 +66,7 @@
    <bottom>
       <HBox fillHeight="false" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#apply" style="-fx-border-color: #00A900;" styleClass="editor-footer-buttons">
+            <Button mnemonicParsing="false" onAction="#apply" style="-fx-border-color: #00A900;" styleClass="editor-footer-buttons" fx:id="applyButton">
                <graphic>
                   <HBox alignment="CENTER_LEFT">
                      <children>
