--- a/fxml/static/header_nav.fxml
+++ b/fxml/static/header_nav.fxml
@@ -126,6 +126,15 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
+                              <Button mnemonicParsing="false" onAction="#osu">
+                                 <graphic>
+                                    <ImageView fitHeight="26.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../icons/circle.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
                            </children>
                         </HBox>
                      </children>
@@ -139,7 +148,7 @@
       </HBox>
       <SplitPane dividerPositions="0.5" maxHeight="1.7976931348623157E308" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
          <items>
-            <TabPane maxWidth="500.0" minWidth="300.0" tabClosingPolicy="UNAVAILABLE" fx:id="tabPane">
+            <TabPane fx:id="tabPane" maxWidth="500.0" minWidth="300.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
                 <Tab text="Words">
                   <content>
