--- a/fxml/style/redefined.css
+++ b/fxml/style/redefined.css
@@ -1,8 +1,7 @@
-/*
 @font-face {
-    font-family: 'inter';
-    src: url('fonts/Fleftex_M.ttf');
-}*/
+    font-family: 'Inter';
+    src: url('Inter.ttf');
+}
 /*Boutons*/
 
 .button{
@@ -14,6 +13,15 @@
 .button:hover{
     -fx-background-color: #72727260;
     -fx-cursor: hand;
+    -fx-font-family: 'Inter';
+}
+
+.label {
+    -fx-font-family: 'Inter';
+}
+
+.button .text {
+    -fx-font-family: 'Inter';
 }
 
 /*Tabs*/
